# qearn-api

./: .env.sample  Cargo.toml  README.md  makefile.toml
.cargo/: config.toml
api-server/: Cargo.toml
api-server/src/: lib.rs  main.rs
api-server/src/constants/: mod.rs
api-server/src/cronjob/: mod.rs
api-server/src/db/: mod.rs  prisma.rs  queries.rs
api-server/src/service/: rpc_service.rs
migrations/: 20250124055701_init.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: api_error.rs  lib.rs  main.rs
src/cronjob/: mod.rs
src/db/: mod.rs  models.rs  queries.rs
src/service/: mod.rs  rpc_service.rs
